syntax = "proto3";

option csharp_namespace = "server";

package login;


service Loginer {
  rpc AccountEnter (LoginRequest) returns (LoginReply);
}

// The request message containing the user's name.
message LoginRequest {
  string name = 1;
  string age=2;
}

// The response message containing the greetings.
message LoginReply {
  string state = 1;//1³É¹¦
}
